--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
 		"lint": "next lint",
 		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
 		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
+		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
+		"generate-icons": "node scripts/generate-icons.js",
+		"pwa-setup": "npm run generate-icons && echo '✅ PWA setup complete!'"
 	},
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.3.1",
 		"next": "15.3.4",
+		"next-pwa": "^5.6.0",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"sharp": "^0.34.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -23,6 +27,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/serviceworker": "^0.0.139",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.4",
 		"tailwindcss": "^4",
